--- a/packages/media_center/media_player_universal_media_center.yaml
+++ b/packages/media_center/media_player_universal_media_center.yaml
@@ -7,7 +7,7 @@ media_player:
       - media_player.apple_tv_salon
       - media_player.tv_cast
       - media_player.philips_android_tv
-      - media_player.sonos_amp
+      - media_player.sonos_amp_music_assistant
     active_child_template: |
       {% if is_state_attr('media_player.philips_android_tv', 'hdmi_input', 'HW2') %}
         media_player.apple_tv_salon
@@ -22,23 +22,23 @@ media_player:
       volume_up:
         action: media_player.volume_up
         target:
-          entity_id: media_player.sonos_amp
+          entity_id: media_player.sonos_amp_music_assistant
       volume_down:
         action: media_player.volume_down
         target:
-          entity_id: media_player.sonos_amp
+          entity_id: media_player.sonos_amp_music_assistant
       volume_set:
         action: media_player.volume_set
         target:
-          entity_id: media_player.sonos_amp
+          entity_id: media_player.sonos_amp_music_assistant
         data:
           volume_level: "{{ volume_level }}"
       volume_mute:
         action: media_player.volume_mute
         target:
-          entity_id: media_player.sonos_amp
+          entity_id: media_player.sonos_amp_music_assistant
         data:
           is_volume_muted: "{{ is_volume_muted }}"
     attributes:
-      is_volume_muted: media_player.sonos_amp|is_volume_muted
-      volume_level: media_player.sonos_amp|volume_level
+      is_volume_muted: media_player.sonos_amp_music_assistant|is_volume_muted
+      volume_level: media_player.sonos_amp_music_assistant|volume_level
