--- a/automations.yaml
+++ b/automations.yaml
@@ -2604,9 +2604,6 @@
       entity_id: input_select.modes_de_presence_de_la_maison_v2
   - if:
     - condition: state
-      entity_id: binary_sensor.presence_rez_de_chaussee
-      state: 'on'
-    - condition: state
       entity_id: lock.serrure_porte_d_entree
       state: locked
     then:
@@ -5732,4 +5729,122 @@
           option: Plannifiée
         target:
           entity_id: input_select.etat_machine_a_laver
+  mode: single
+- id: '1745787390051'
+  alias: 'Machine à laver - Alimentation écran companion '
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - binary_sensor.machine_a_laver_puissance
+  - trigger: homeassistant
+    event: start
+  conditions: []
+  actions:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.machine_a_laver_puissance
+        state: 'on'
+      sequence:
+      - action: light.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.ecran_companion_de_la_machine_a_laver_screen
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.machine_a_laver_puissance
+        state: 'off'
+      sequence:
+      - action: light.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.ecran_companion_de_la_machine_a_laver_screen
+  mode: single
+- id: '1745952054053'
+  alias: Mode sommeil Marilou - Bouton
+  description: ''
+  triggers:
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_short_press
+    subtype: turn_on
+    trigger: device
+    id: 'on'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_long_release
+    subtype: turn_on
+    trigger: device
+    id: 'on'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_short_press
+    subtype: dim_up
+    trigger: device
+    id: 'on'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_long_release
+    subtype: dim_up
+    trigger: device
+    id: 'on'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_short_press
+    subtype: dim_down
+    trigger: device
+    id: 'off'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_long_release
+    subtype: dim_down
+    trigger: device
+    id: 'off'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_short_press
+    subtype: turn_off
+    trigger: device
+    id: 'off'
+  - device_id: 5c9632c0c8c35cb775c78bbc03bb844c
+    domain: zha
+    type: remote_button_long_release
+    subtype: turn_off
+    trigger: device
+    id: 'off'
+  conditions: []
+  actions:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - 'on'
+      sequence:
+      - action: input_boolean.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: input_boolean.mode_sommeil_marilou
+    - conditions:
+      - condition: trigger
+        id:
+        - 'off'
+      sequence:
+      - if:
+        - condition: state
+          entity_id: input_boolean.mode_sommeil_marilou
+          state: 'off'
+        then:
+        - action: input_boolean.turn_on
+          metadata: {}
+          data: {}
+          target:
+            entity_id: input_boolean.mode_sommeil_marilou
+        else:
+        - action: script.start_marilou_bedtime_routine
+          metadata: {}
+          data: {}
   mode: single
