--- a/packages/battery/low_batteries.yaml
+++ b/packages/battery/low_batteries.yaml
@@ -6,12 +6,12 @@ template:
         state: "{{this.attributes.entities | length}}"
         attributes:
           entities: |
-            [{% for
-              entity in
-                expand(states.binary_sensor)
+            {{ 
+              expand(states.binary_sensor)
                 | selectattr('attributes.device_class', 'defined')
-                | selectattr('attributes.device_class', 'eq', 'battery') %}
-              {% if entity.state == "on" %}
-                  "{{ entity.attributes.friendly_name }}",
-              {% endif %}
-            {% endfor %}]
+                | selectattr('attributes.device_class', 'eq', 'battery')
+                | selectattr('state', 'eq', 'on')
+                | map(attribute='entity_id') 
+                | list
+                | sort
+            }}
