--- a/esphome/living-room-cover.yaml
+++ b/esphome/living-room-cover.yaml
@@ -1,6 +1,6 @@
 esphome:
   name: "living-room-cover"
-  friendly_name: Volets Salon
+  friendly_name: Volets
 
 esp32:
   board: esp32dev
@@ -28,7 +28,7 @@ wifi:
 switch:
   - platform: gpio
     id: living_room_cover_up
-    name: "Volet Salon - Bouton UP (Fallback)"
+    name: "Bouton UP (Fallback)"
     icon: "mdi:arrow-up-bold"
     entity_category: diagnostic
     pin: 
@@ -43,7 +43,7 @@ switch:
     
   - platform: gpio
     id: living_room_cover_stop
-    name: "Volet Salon - Bouton STOP (Fallback)"
+    name: "Bouton STOP (Fallback)"
     icon: "mdi:square"
     entity_category: diagnostic
     pin: 
@@ -58,7 +58,7 @@ switch:
     
   - platform: gpio
     id: living_room_cover_down
-    name: "Volet Salon - Bouton DOWN (Fallback)"
+    name: "Bouton DOWN (Fallback)"
     icon: "mdi:arrow-down-bold"
     entity_category: diagnostic
     pin: 
@@ -74,7 +74,7 @@ switch:
 cover:
   - platform: time_based
     id: living_room_cover
-    name: "Volets Salon"
+    name: None
     assumed_state: true
     open_action:
       - switch.turn_on: living_room_cover_up
