--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1545,3 +1545,16 @@ power_notification_appareil_reattache_automatiquement:
       default_message: Appareil réattaché automatiquement
   alias: Power Notification - Appareil réattaché automatiquement
   description: ''
+power_notification_serrure_verrouillee:
+  use_blueprint:
+    path: jlo/power_notification_creator.yaml
+    input:
+      persons:
+      - person.jenova70
+      target: send_to_all
+      zones: []
+      default_title: "\U0001F513 Serrure"
+      default_message: La serrure vient d'être verrouillée
+      default_importance: false
+  alias: Power notification - Serrure verrouillée
+  description: ''
